--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,9 @@
 <script src="bower_components/angular-route/angular-route.min.js"></script>
 <script src="bower_components/jquery/dist/jquery.slim.min.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="app.js"></script>
+<script src="app.config.js"></script>
+<script src="app.route.js"></script>
 <script src="modules/login/login.controller.js"></script>
 <script src="modules/registration/registration.controller.js"></script>
 </body>
